# HW4

./: .gitignore  Cargo.toml  HW4.tex  latexindent.yaml
src/: main.rs  prob5.rs  prob7.rs
