[package]
name = "hw4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "problem5"
path = "src/prob5.rs"

[[bin]]
name = "problem7"
path = "src/prob7.rs"

[dependencies]
nalgebra = { version = "0.32.3", features = ["rand"] }
rand = "0.8.5"
rand_distr = "0.4.3"

[profile.dev]
opt-level = 1 # Use slightly better optimizations.